# Taller1crea

./: CMakeLists.txt  Libro.cpp  Libro.h  Main.cpp  MaterialBibliografico.cpp  MaterialBibliografico.h  Revista.cpp  Revista.h  Usuario.cpp  Usuario.h
